--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "api/proxy.js": {
       "maxDuration": 30
+    },
+    "api/upload.js": {
+      "maxDuration": 60
     }
   },
   "rewrites": [
